--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "hometask01",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.8.4",
+    "ts-node": "^10.9.1",
+    "types": "^0.1.1",
+    "typescript": "^4.8.4"
   }
 }
