--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.4",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "types": "^0.1.1",
     "typescript": "^4.8.4"
