--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
     "uuid": "^9.0.0"
   },
